# mypy_safe_unpack

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: Makefile
docs/source/: conf.py  index.rst
mypy_safe_unpack/: __init__.py  basemodel_dict.py  dict.py  dict_any_any.py  dict_str_any.py  dict_strict.py  intro.py  namedtuple_asdict.py  starred_expression.py  typeddict.py  unpack_everything.py  vars_class.py
